style.css
html,
body {
  padding: 0;
  margin: 0 auto;
  height: 100%;
  width: 100%;
  overflow: hidden;
  font-family: "Helvetica Neue", Arial;
}

#map {
  width: 100vw;
  height: calc(100vh - 70px);
  visibility: hidden;
}

#header {
  height: 70px;
  background-color: #353735;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

#header img {
  height: 30px;
  padding: 20px;
  float: left;
}

.header-links {
  margin-top: 26px;
  margin-left: 20px;
  position: relative;
  float: left;
  font-size: 16px;
  font-weight: bold;
  color: white;
}

.header-links a {
  color: white;
  margin: 0 10px;
  text-decoration: none;
}

#sidebar {
  position: absolute;
  z-index: 9999;
  height: calc(100vh - 60px);
  width: 300px;
  right: 0;
  top: 0;
  background-color: #fff;
  color: #353735;
  padding: 30px 20px;
  display: none;
  overflow-y: scroll;
  overflow-x: hidden;
  opacity: 0.9;
}

#sidebar-close {
  position: absolute;
  font-size: 30px;
  top: 10px;
  right: 10px;
  color: #353735;
  cursor: pointer;
}

#map-title-close {
  position: absolute;
  top: 0;
  right: 5px;
  z-index: 10000;
  cursor: pointer;
  font-size: 15px;
  padding: 0 0 10px 10px;
}

abbr {
  border-bottom: 1px dotted black;
  cursor: help;
  text-decoration: none;
}

h3 {
  font-size: 1.5em;
  line-height: 1.2em;
  margin: 0;
  padding-bottom: 3px;
}

h5 {
  font-size: 1em;
  font-weight: normal;
  line-height: 1.3em;
  margin: 0;
}

h6 {
  margin: 0;
  font-size: 1.2em;
}

.leaflet-popup-scrolled {
  border-top: 0 !important;
  border-bottom: 0 !important;
}

.intro-popup {
  position: absolute;
  top: 10vh;
  max-height: 80vh;
  left: calc(50vw - 300px);
  width: 600px;
  overflow-y: scroll;
  z-index: 999;
}

.intro-popup .leaflet-popup-content {
  width: 100%;
}

.intro-popup .leaflet-popup-tip-container {
  width: 0;
  height: 0;
}

.pointer {
  cursor: pointer;
}

.leaflet-control-custom {
  padding: 6px 8px;
  background: white;
  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
  color: #333;
  border-radius: 5px;
}

#school-search {
  position: absolute !important;
  top: 20px;
  right: 15px;
}

.leaflet-control-search {
  z-index: 10000;
}

form {
  margin-top: 2px;
}

.polygons-legend-scale {
  margin-top: 4px;
  padding-top: 7px;
  border-top: dotted 3px #eee;
}

.polygons-legend-scale i {
  width: 18px;
  height: 18px;
  float: left;
  margin-right: 8px;
}

.leaflet-popup-content {
  min-width: 150px;
}

.leaflet-popup-content img {
  width: 100%;
  margin: 5px 0 5px 0;
}

.geojson-point-marker {
  radius: 3;
}

.loader,
.loader:before,
.loader:after {
  background: #353735;
  -webkit-animation: load1 1s infinite ease-in-out;
  animation: load1 1s infinite ease-in-out;
  width: 1em;
  height: 4em;
}
.loader:before,
.loader:after {
  position: absolute;
  top: 0;
  content: '';
}
.loader:before {
  left: -1.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.loader {
  color: #353735;
  text-indent: -9999em;
  position: absolute;
  left: 50vw;
  top: 45vh;
  font-size: 11px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
.loader:after {
  left: 1.5em;
}
@-webkit-keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}
@keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}

/* Technically there are two map titles, on the left and on the right,
 * at all times. On a big screen, map title in the right column is not
 * displayed. On a mobile device, title in the right column is shown with 0
 * opacity, so that search, locate, and zoom buttons do not overlay the title,
 * creating an effect as if the title is located on top, and not the left column.
 */
.leaflet-right .map-title { display: none; }

/*
@media only screen and (max-width: 760px) {
  .leaflet-right .map-title {
    display: block;
    opacity: 0;
  }

  .leaflet-left .map-title {
    width: 98%;
  }
} */

#mobile-intro-popup {
  position: absolute;
  bottom: 5vh;
  left: 10vw;
  width: 70vw;
  z-index: 1000;
  background: white;
  padding: 1vh 5vw;
  opacity: 0.9;
  border: 5px #ddd solid;
  border-radius: 5px;
}

#mobile-intro-popup p {
  margin: 10px 0 10px 0;
  max-height: 80vh;
  overflow-y: scroll;
  overflow-x: hidden;
}

#mobile-intro-popup-close {
  position: absolute;
  top: 3px;
  right: 3px;
  width: 30px;
  background: #bbb;
  color: white;
  font-size: 1.4em;
  text-align: center;
  border-radius: 5px;
  opacity: 0.8;
}

#polygonSelect {
  width: 100%;
}

.polygon-label {
  position: absolute;
  left: -15px;
  color: #444;
  font-weight: bold;
  opacity: 0.9;
  pointer-events: none !important;
}

.color-line {
  display: inline-block;
  vertical-align: middle;
  height: 3px;
  width: 20px;
}

.markers-legend-icon {
  height: 12px;
  vertical-align: middle;
}

.map-title {
  margin-top: 0 !important;
  margin-bottom: 10px;
  max-width: 450px;
}

.leaflet-top.leaflet-left {
  padding-top: 10px;
}

/* Map Table */
div.dataTables_scrollBody {
  border: 0 !important;
}

div.dataTables_scrollHead {
  color: #eee !important;
}

table.dataTable thead th {
  text-align: left;
}

table.dataTable td {
  padding-left: 18px !important;
}

.dataTable * {
  font-size: 14px !important;
  border: 0 !important;
}

div.dataTables_scrollHead table.display {
  background-color: #444;
  color: #eee;
}

select {
  font-size: 1.2em;
  font-weight: bold;
}

.div-center {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding-top: 10px;
}

span.legend-arrow {
  color: rgb(238, 238, 238);
  position: absolute;
  right: 8px;
  top: 5px;
}

span.legend-icon {
  color: #bbb;
  margin-right: 5px;
}

.ladder {
  width: 270px;
  margin-top: -5px !important;
  overflow: hidden;
}

.ladder h6.minimize ~ div,
.ladder h6.minimize ~ form {
  display: none !important;
}

.ladder form, .ladder div {
  display: block;
}



// Slider

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 35px;
  height: 30px;
  left: 0;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 13px;
  width: 13px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

#maptable tr:last-child td {
  height: 70px;
  vertical-align: top;
}

